--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <title>Blink Web Component</title>
   </head>
   <body>
-    <h1>Adding the blink tag again</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <nu-blink>Cras</nu-blink> eget augue varius, <nu-blink>tempor quam id, facilisis dolor</nu-blink>. Morbi commodo, dolor quis tempor ultrices, tellus risus condimentum felis, quis cursus leo metus sit amet augue. Ut dictum vestibulum diam, nec aliquet mi imperdiet vitae. Integer cursus enim sed venenatis consectetur. Sed magna odio, porttitor vitae lacus id, ultrices rutrum tellus. Integer ac pulvinar felis. Maecenas tempor massa quis iaculis convallis. Nunc risus mauris, malesuada ac efficitur in, laoreet at quam. Integer finibus, quam id venenatis feugiat, ex libero ornare augue, ut tristique mi dui sit amet sapien. Curabitur a tempus leo. Ut quis orci vitae nunc facilisis condimentum. Donec eget dapibus velit.    </p>
+    <h1>Adding the blink tag again (and other new horrors)</h1>
+    <p>Lorem ipsum dolor sit amet, <nu-spin>consectetur</nu-spin> adipiscing elit. <nu-cycle>Cras</nu-cycle> eget augue varius, <nu-blink>tempor quam id, facilisis dolor</nu-blink>. Morbi commodo, dolor quis tempor ultrices, tellus risus condimentum felis, quis cursus leo metus sit amet augue. Ut dictum vestibulum diam, nec aliquet mi imperdiet vitae. Integer cursus enim sed venenatis consectetur. Sed magna odio, porttitor vitae lacus id, ultrices rutrum tellus. Integer ac pulvinar felis. Maecenas tempor massa quis iaculis convallis. Nunc risus mauris, malesuada ac efficitur in, laoreet at quam. Integer finibus, quam id venenatis feugiat, ex libero ornare augue, <nu-clench>ut tristique mi dui sit amet sapien.</nu-clench> <nu-flex>Curabitur a tempus leo.</nu-flex> Ut quis orci vitae nunc facilisis condimentum. Donec eget dapibus velit.</p>
   </body>
-  <script src="script.js"></script>
+  <script src="blink.js"></script>
+  <script src="clench.js"></script>
+  <script src="cycle.js"></script>
+  <script src="flex.js"></script>
+  <script src="spin.js"></script>
 </html>
